objects/LP_Attendee__c.object
<CustomObject><fields>
        <fullName>Course_Enrollment__c</fullName>
        <label>Course Enrollment</label>
        <referenceTo>hed__Course_Enrollment__c</referenceTo>
        <relationshipName>SI_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>LP_Attendee_Hours__c</fullName>
        <label>LP Attendee Hours</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>LP_Session_Hours__c</fullName>
        <formula>Learning_Program__r.Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LP Session Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Learning_Program__c</fullName>
        <label>Learning Program</label>
        <referenceTo>Learning_Program__c</referenceTo>
        <relationshipLabel>Learning Program Attendees</relationshipLabel>
        <relationshipName>Learning_Program_Attendees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <formula>Course_Enrollment__r.hed__Contact__r.Full_Name__c</formula>
        <label>Student</label>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Learning Program Attendee</label><nameField>
        <displayFormat>LPA-{0000}</displayFormat>
        <label>LP Attendee</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Learning Program Attendees</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Learning_Program__c</columns>
        <columns>LP_Attendee_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>